Refactor `UserRepository` to improve playlist handling and simplify query logic
- Renamed `createPlaylists` to `formatPublicPlaylists` for clarity.
- Updated logic to skip users without visible playlists.
- Adjusted profile query to remove redundant user-specific playlist condition.